# pkcore-public

./: .env_EXAMPLE  .gitignore  .rustfmt.toml  Cargo.toml  DIARY.md  Makefile.toml  README.md
.github/workflows/: basic.yaml
data/: clean_hups.db  current_hups.csv  dhups.db  gaps-working.txt  gaps.txt  hups.db  last_hups.db  old_clean_hups.db  sample_hups.db  type_2-paired.txt  type_2.txt
docs/: EPIC-00.md  EPIC-00c_Domain.md  EPIC-00d_Dimensions.md  EPIC-00e_Dev_Cadence.md  EPIC-00f_Coverage.md  EPIC-02_Calc.md  EPIC-06_Preflop.md  EPIC-07_Transposition.md  EPIC-08_Web.md  EPIC-09_Omaha.md  EPIC-66_Serialization.md  EPIC-67_Demons.md  EPIC-95_Distinct.md  EPIC-96_The_Answers.md  EPIC-97_Philosophy.md  EPIC-98_Glossary.md  EPIC-999_ramblings.md  EPIC-99_References.md
docs/files/: EPIC-97_Truth.md  all_hands.txt
examples/: audit.rs  bcrepl.rs  calc.rs  cck.rs  eight_or_better.rs  generate_bcm.rs  gto.rs  hup_dump.rs  insert_distinct.rs  preflop.rs  simple_collections_example.rs  simple_eval_example.rs  simple_suit_shift_example.rs  the_hand.rs
examples/retired/: README_cell_vector.md  all_possible.rs  bcrepl_old.rs  bitloop.rs  bitvec.rs  byx.rs  cards.rs  case2.rs  cell_vector_examples.rs  concurrent.rs  deal.rs  defect_a.rs  distinct.rs  distinct_diff.rs  dreport.rs  dynamic_arrays.rs  fudd.rs  gaps.rs  generate_all_possible_shu.rs  generate_distinct_shus.rs  generate_icm.rs  generate_sled.rs  generate_sqlite.rs  (+41 more)
scripts/: hup_dump
src/: bard.rs  card.rs  card_number.rs  cards.rs  cards_cell.rs  deck.rs  lib.rs  macros.rs  prelude.rs  rank.rs  ranks.rs  suit.rs
tests/: heavy_tests.rs
(+118 files in other folders)
