[package]
name = "pkcore"
version = "0.0.15"
rust-version = "1.85.1"
edition = "2024"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ImperialBower/pkcore.git"
homepage = "https://github.com/ImperialBower/pkcore"
exclude = [".github/workflows/*", "examples/*", ".gitignore", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bint = "0.1.15"
bitvec = { version = "1.0.1", features = ["alloc",  "atomic", "std", "serde", "testing" ] }
csv = "1.4"
dotenvy = "0.15"
indexmap = { version = "2.12", features = ["rayon"] }
itertools = "0.14"
log = "0.4"
percent-encoding = "2.3"
rand = "0.9"
random_name_generator = "0.3.6"
rayon = "1.10.0"
regex = { version = "1.11", features = [] }
rusqlite = { version = "0.34", features = ["bundled"] } # 0.35 breaks HUPResult https://github.com/rusqlite/rusqlite/releases#reactions--reaction_button_component-a0702b
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27.2"
termion = "*"
thousands = "0.2.0"
uuid = { version = "1.19", features = ["v4"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive", "unicode"] }
elr_primes = "0.1.2"
env_logger = "0.11.8"

rstest = "0.26.1"
serde_test = "1.0.177"
testing_logger = "0.1.1"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
test-log = "0.2.15"
#wincounter = "0.1.1"
